updated clients to latest swagger version
