# go/model_activity.go
@@ -19,14 +19,26 @@ type Activity struct {
 	// id that refers to address
 	LocationId string `json:"location_id,omitempty"`
 
+	// address of activity
+	Address *Address `json:"address,omitempty"`
+
 	// arrival time at this activity in seconds
 	ArrTime int64 `json:"arr_time,omitempty"`
 
 	// end time of and thus departure time at this activity
 	EndTime int64 `json:"end_time,omitempty"`
 
+	// end date time with offset like this 1970-01-01T01:00+01:00
+	EndDateTime string `json:"end_date_time,omitempty"`
+
+	// arrival date time with offset like this 1970-01-01T01:00+01:00
+	ArrDateTime string `json:"arr_date_time,omitempty"`
+
 	// waiting time at this activity in seconds
 	WaitingTime int64 `json:"waiting_time,omitempty"`
+
+	// preparation time at this activity in seconds
+	PreparationTime int64 `json:"preparation_time,omitempty"`
 
 	// cumulated distance from start to this activity in m
 	Distance int64 `json:"distance,omitempty"`
